--- a/SAO-EP/Src/ApprovalDraft.fx.yaml
+++ b/SAO-EP/Src/ApprovalDraft.fx.yaml
@@ -1,4 +1,5 @@
 "ApprovalDraft As screen.'autoLayout_Approval_ver1.0'":
+    OnVisible: =ClearCollect(ApprovalsAndAPFs, 'APF Uploads', 'Approvals History')
 
     ScreenContainer3 As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(245, 245, 245, 1)
@@ -86,15 +87,64 @@
                     Width: =180
                     X: =0
                     Y: =0
-                    ZIndex: =6
+                    ZIndex: =1
+
+                "Gallery2 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
+                    DelayItemLoading: =true
+                    Items: ='APF Uploads'
+                    Layout: =Layout.Vertical
+                    LoadingSpinner: =LoadingSpinner.Data
+                    TemplatePadding: =0
+                    TemplateSize: =50
+                    Width: =1000
+                    ZIndex: =1
+
+                    NextArrow5 As icon.ChevronRight:
+                        AccessibleLabel: =Self.Tooltip
+                        Color: =RGBA(166, 166, 166, 1)
+                        Height: =50
+                        Icon: =Icon.ChevronRight
+                        OnSelect: =Select(Parent)
+                        PaddingBottom: =16
+                        PaddingLeft: =16
+                        PaddingRight: =16
+                        PaddingTop: =16
+                        Tooltip: ="View item details"
+                        Width: =50
+                        X: =Parent.TemplateWidth - Self.Width - 12
+                        Y: =(Parent.TemplateHeight / 2) - (Self.Height / 2)
+                        ZIndex: =4
+
+                    Separator9 As rectangle:
+                        Fill: =RGBA(255, 255, 255, 1)
+                        Height: =8
+                        OnSelect: =Select(Parent)
+                        Width: =Parent.TemplateWidth
+                        Y: =Parent.TemplateHeight - Self.Height
+                        ZIndex: =5
+
+                    Rectangle12 As rectangle:
+                        Height: =Parent.TemplateHeight - Separator9.Height
+                        OnSelect: =Select(Parent)
+                        Visible: =ThisItem.IsSelected
+                        Width: =4
+                        ZIndex: =6
+
+                    TextCanvas4 As Text:
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =50
+                        Size: =20
+                        Text: =ThisItem.'Activity Title'
+                        Width: =400
+                        X: =20
+                        Y: =0
+                        ZIndex: =7
 
                 ApprovalForm1 As form.PowerApps_CoreControls_Form:
                     DefaultMode: =FormMode.New
-                    LayoutMinHeight: =0
-                    LayoutMinWidth: =0
                     NumberOfColumns: =1
                     UseFluentV9Cards: =true
-                    ZIndex: =7
+                    ZIndex: =3
 
                 SubmitButton1 As Button:
                     AccessibleLabel: ="Submit approval request button"
@@ -110,7 +160,7 @@
                     Width: =140
                     X: =0
                     Y: =0
-                    ZIndex: =8
+                    ZIndex: =4
 
             SidebarContainer3 As groupContainer.verticalAutoLayoutContainer:
                 Fill: =RGBA(255, 255, 255, 1)
