--- a/SAO-EP/Src/ApprovalDraft.fx.yaml
+++ b/SAO-EP/Src/ApprovalDraft.fx.yaml
@@ -77,7 +77,7 @@
 
                 "Gallery2 As gallery.'BrowseLayout_Vertical_TwoTextOneImageVariant_ver5.0'":
                     DelayItemLoading: =true
-                    Items: ='APF Uploads'
+                    Items: =Filter('APF Uploads','Name of Lead Org' = CurrentUserOrg.orgAcronym)
                     Layout: =Layout.Vertical
                     LayoutMinHeight: =287
                     LayoutMinWidth: =320
@@ -210,6 +210,23 @@
                     X: =0
                     Y: =0
                     ZIndex: =5
+
+                TextCanvas4_1 As Text:
+                    Align: ='TextCanvas.Align'.Center
+                    AlignInContainer: =AlignInContainer.Start
+                    AutoHeight: =false
+                    DisplayMode: =DisplayMode.Edit
+                    FillPortions: =1
+                    Height: =25
+                    LayoutMinHeight: =32
+                    LayoutMinWidth: =96
+                    Text: ="Adviser Approval"
+                    Weight: ='TextCanvas.Weight'.Bold
+                    Width: =135
+                    Wrap: =false
+                    X: =410
+                    Y: =0
+                    ZIndex: =6
 
             SidebarContainer3 As groupContainer.verticalAutoLayoutContainer:
                 Fill: =RGBA(255, 255, 255, 1)
