--- a/SAO-EP/Src/EditorState/ApprovalDraft.editorstate.json
+++ b/SAO-EP/Src/EditorState/ApprovalDraft.editorstate.json
@@ -2480,7 +2480,7 @@
         {
           "Category": "Design",
           "PropertyName": "Width",
-          "RuleProviderType": "User"
+          "RuleProviderType": "Unknown"
         },
         {
           "Category": "Design",
