--- a/SAO-EP/CanvasManifest.json
+++ b/SAO-EP/CanvasManifest.json
@@ -71,7 +71,7 @@
       "optimizedforteamsmeeting": false,
       "packagemodernruntime": false,
       "parallelcodegen": false,
-      "pdffunction": false,
+      "pdffunction": true,
       "powerfxdecimal": false,
       "powerfxv1": false,
       "preferpayamlv3inux": false,
