--- a/SAO-EP/Src/Reports.fx.yaml
+++ b/SAO-EP/Src/Reports.fx.yaml
@@ -177,7 +177,7 @@
                                 }
                             )
                         Width: =261
-                        X: =99
+                        X: =84
                         Y: =30
                         ZIndex: =1
 
@@ -216,7 +216,7 @@
                             )
                         Text: ="All"
                         Width: =54
-                        X: =25
+                        X: =10
                         Y: =30
                         ZIndex: =2
 
@@ -224,9 +224,30 @@
                         Height: =46
                         Icon: =Icon.VerticalLine
                         Width: =20
-                        X: =79
+                        X: =64
                         Y: =30
                         ZIndex: =3
+
+                    ButtonCanvas1 As Button:
+                        BorderColor: =RGBA(0, 0, 0, 1)
+                        BorderStyle: =BorderStyle.Solid
+                        DisplayMode: =DisplayMode.Edit
+                        Height: =46
+                        Icon: ="ArrowDownload"
+                        OnSelect: =PDF(Reports)
+                        Text: =
+                        Width: =41
+                        X: =365
+                        Y: =30
+                        ZIndex: =4
+
+                    Icon21_1 As icon.VerticalLine:
+                        Height: =46
+                        Icon: =Icon.VerticalLine
+                        Width: =20
+                        X: =345
+                        Y: =30
+                        ZIndex: =5
 
                 TitleContainer21 As groupContainer.verticalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.Center
